# engrams

./: .gitignore  AGENT_OS_SPEC.md  BREAKTHROUGH_NOTES.md  CLAUDE.md  HONEST_ASSESSMENT.md  MEDIUM_ARTICLE.txt  PUBLICATION_CHECKLIST.md  README.md  RESEARCH_SUMMARY.md  engram_strength_test.py  experiments_writeup.txt  paper_engrams.md  paper_engrams.txt  paper_engrams_medium.txt  paper_engrams_retrieval.txt  pyproject.toml
docs/: act_symmetry_analysis.md  embedding_correction_negative_result.md  engram_decision_override_paper.md  engram_decision_override_paper.txt  engram_mechanism_findings.md  follow_up_experiments_findings.md  medium_revised_paper.txt  personality_engrams_article.md  practical_guide.md  practical_guide.txt  rag_deployment_guide.md  rag_deployment_guide.txt  rome_implementation_findings.md  semantic_priming_findings.md  what_we_got_wrong_v2.md  what_we_got_wrong_v2.txt
engrams/: __init__.py  context_manager.py  extractor.py  injector.py  storage.py  wikipedia.py
notebooks/: 01_extraction_experiments.ipynb
paper/: geometric_correction_medical_ai.md  geometric_correction_medical_ai_medium.txt  mikey_bee_centroid.md  mikey_bee_centroid_medium.txt  semantic_sinks_complete.txt  the_knowledge_correction_problem.md  the_knowledge_correction_problem.txt
results/: baseline_no_context.json  chained_biology_alpha0.1.json  chained_biology_alpha0.3.json  chained_engram_plus_rag_alpha0.1.json  contradictory_facts.json  direct_fact_recall.json  engram_plus_rag.json  engram_plus_rag_novel.json  engram_vs_prompt.json  fact_check_test.json  gated_engram.json  (+17 more)
(+83 files in other folders)
